--- a/currency/aud-to-usd/index.html
+++ b/currency/aud-to-usd/index.html
@@ -149,9 +149,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/gbp-to-cad" style="color: var(--primary-color); text-decoration: underline;">GBP to CAD Rate</a></p>
+                <p><a href="/currency/usd-to-inr" style="color: var(--primary-color); text-decoration: underline;">USD to INR Rate</a></p>
+<p><a href="/currency/eur-to-sek" style="color: var(--primary-color); text-decoration: underline;">EUR to SEK Rate</a></p>
 <p><a href="/currency/sek-to-usd" style="color: var(--primary-color); text-decoration: underline;">SEK to USD Rate</a></p>
-<p><a href="/currency/gbp-to-usd" style="color: var(--primary-color); text-decoration: underline;">GBP to USD Rate</a></p>
 <p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
