--- a/currency/eur-to-sek/index.html
+++ b/currency/eur-to-sek/index.html
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/aud-to-usd" style="color: var(--primary-color); text-decoration: underline;">AUD to USD Rate</a></p>
-<p><a href="/currency/gbp-to-eur" style="color: var(--primary-color); text-decoration: underline;">GBP to EUR Rate</a></p>
-<p><a href="/currency/aud-to-eur" style="color: var(--primary-color); text-decoration: underline;">AUD to EUR Rate</a></p>
-<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
+                <p><a href="/currency/cad-to-gbp" style="color: var(--primary-color); text-decoration: underline;">CAD to GBP Rate</a></p>
+<p><a href="/currency/dkk-to-eur" style="color: var(--primary-color); text-decoration: underline;">DKK to EUR Rate</a></p>
+<p><a href="/currency/usd-to-gbp" style="color: var(--primary-color); text-decoration: underline;">USD to GBP Rate</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
