--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="Toolsified is your hub for simple, smart, and free online tools – starting with time zone converters. More to come." />
   <title>Toolsified – Smart tools for everyday tasks</title>
-  <link rel="stylesheet" href="style.css?v=2.0" />
+  <link rel="stylesheet" href="/style.css?v=2.2" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
