--- a/crypto/sol-to-usd/index.html
+++ b/crypto/sol-to-usd/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Track your Solana (SOL) investments. Convert SOL to US Dollars (USD) and calculate exact historic profit and loss instantly." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
-    <link rel="stylesheet" href="/style.css?v=2.0" />
+    <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -103,8 +103,8 @@
                 <div class="internal-links-cluster" style="margin-bottom: 32px;">
                     <p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
 <p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
-<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
-<p><a href="/currency/usd-to-nzd" style="color: var(--primary-color); text-decoration: underline;">USD to NZD Rate</a></p>
+<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
+<p><a href="/currency/eur-to-aud" style="color: var(--primary-color); text-decoration: underline;">EUR to AUD Rate</a></p>
                     <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart
                             Crypto Converter Hub</a></p>
                 </div>
