--- a/currency/chf-to-eur/index.html
+++ b/currency/chf-to-eur/index.html
@@ -8,7 +8,7 @@
     <title>Live CHF to EUR Exchange Rate (2026) | Convert Swiss Francs</title>
     <meta name="description"
         content="Convert Swiss Francs (CHF) to Euros (EUR) instantly with live exchange rates. Fast & free currency converter." />
-    <link rel="stylesheet" href="/style.css?v=2.0" />
+    <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/cad-to-eur" style="color: var(--primary-color); text-decoration: underline;">CAD to EUR Rate</a></p>
-<p><a href="/currency/hkd-to-usd" style="color: var(--primary-color); text-decoration: underline;">HKD to USD Rate</a></p>
-<p><a href="/currency/cny-to-usd" style="color: var(--primary-color); text-decoration: underline;">CNY to USD Rate</a></p>
-<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
+                <p><a href="/currency/usd-to-nok" style="color: var(--primary-color); text-decoration: underline;">USD to NOK Rate</a></p>
+<p><a href="/currency/eur-to-sek" style="color: var(--primary-color); text-decoration: underline;">EUR to SEK Rate</a></p>
+<p><a href="/currency/usd-to-sek" style="color: var(--primary-color); text-decoration: underline;">USD to SEK Rate</a></p>
+<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
