--- a/currency/hkd-to-usd/index.html
+++ b/currency/hkd-to-usd/index.html
@@ -8,7 +8,7 @@
     <title>Live HKD to USD Exchange Rate (2026) | Convert Hong Kong Dollars</title>
     <meta name="description"
         content="Convert Hong Kong Dollars (HKD) to US Dollars (USD) instantly with live exchange rates. Fast & free currency converter." />
-    <link rel="stylesheet" href="/style.css?v=2.0" />
+    <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -149,9 +149,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/eur-to-nok" style="color: var(--primary-color); text-decoration: underline;">EUR to NOK Rate</a></p>
-<p><a href="/currency/usd-to-eur" style="color: var(--primary-color); text-decoration: underline;">USD to EUR Rate</a></p>
-<p><a href="/currency/dkk-to-eur" style="color: var(--primary-color); text-decoration: underline;">DKK to EUR Rate</a></p>
+                <p><a href="/currency/cad-to-gbp" style="color: var(--primary-color); text-decoration: underline;">CAD to GBP Rate</a></p>
+<p><a href="/currency/sek-to-usd" style="color: var(--primary-color); text-decoration: underline;">SEK to USD Rate</a></p>
+<p><a href="/currency/gbp-to-usd" style="color: var(--primary-color); text-decoration: underline;">GBP to USD Rate</a></p>
 <p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
