--- a/currency/sek-to-usd/index.html
+++ b/currency/sek-to-usd/index.html
@@ -8,7 +8,7 @@
     <title>Live SEK to USD Exchange Rate (2026) | Convert Swedish Krona</title>
     <meta name="description"
         content="Convert Swedish Krona (SEK) to US Dollars (USD) instantly with live exchange rates. Fast & free currency converter." />
-    <link rel="stylesheet" href="/style.css?v=2.0" />
+    <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/eur-to-gbp" style="color: var(--primary-color); text-decoration: underline;">EUR to GBP Rate</a></p>
-<p><a href="/currency/usd-to-krw" style="color: var(--primary-color); text-decoration: underline;">USD to KRW Rate</a></p>
-<p><a href="/currency/krw-to-usd" style="color: var(--primary-color); text-decoration: underline;">KRW to USD Rate</a></p>
-<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
+                <p><a href="/currency/aud-to-eur" style="color: var(--primary-color); text-decoration: underline;">AUD to EUR Rate</a></p>
+<p><a href="/currency/zar-to-usd" style="color: var(--primary-color); text-decoration: underline;">ZAR to USD Rate</a></p>
+<p><a href="/currency/chf-to-eur" style="color: var(--primary-color); text-decoration: underline;">CHF to EUR Rate</a></p>
+<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
