--- a/currency/usd-to-aud/index.html
+++ b/currency/usd-to-aud/index.html
@@ -8,7 +8,7 @@
     <title>Live USD to AUD Exchange Rate (2026) | Convert US Dollars</title>
     <meta name="description"
         content="Convert US Dollars (USD) to Australian Dollars (AUD) instantly with live exchange rates. Fast & free currency converter." />
-    <link rel="stylesheet" href="/style.css?v=2.0" />
+    <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -149,9 +149,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-aud" style="color: var(--primary-color); text-decoration: underline;">USD to AUD Rate</a></p>
-<p><a href="/currency/sgd-to-usd" style="color: var(--primary-color); text-decoration: underline;">SGD to USD Rate</a></p>
-<p><a href="/currency/nzd-to-usd" style="color: var(--primary-color); text-decoration: underline;">NZD to USD Rate</a></p>
+                <p><a href="/currency/eur-to-usd" style="color: var(--primary-color); text-decoration: underline;">EUR to USD Rate</a></p>
+<p><a href="/currency/dkk-to-eur" style="color: var(--primary-color); text-decoration: underline;">DKK to EUR Rate</a></p>
+<p><a href="/currency/nok-to-eur" style="color: var(--primary-color); text-decoration: underline;">NOK to EUR Rate</a></p>
 <p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
