--- a/currency/usd-to-zar/index.html
+++ b/currency/usd-to-zar/index.html
@@ -8,7 +8,7 @@
     <title>Live USD to ZAR Exchange Rate (2026) | Convert US Dollars</title>
     <meta name="description"
         content="Convert US Dollars (USD) to South African Rand (ZAR) instantly with live exchange rates. Fast & free currency converter." />
-    <link rel="stylesheet" href="/style.css?v=2.0" />
+    <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-dkk" style="color: var(--primary-color); text-decoration: underline;">USD to DKK Rate</a></p>
-<p><a href="/currency/eur-to-dkk" style="color: var(--primary-color); text-decoration: underline;">EUR to DKK Rate</a></p>
-<p><a href="/currency/usd-to-gbp" style="color: var(--primary-color); text-decoration: underline;">USD to GBP Rate</a></p>
-<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
+                <p><a href="/currency/cad-to-gbp" style="color: var(--primary-color); text-decoration: underline;">CAD to GBP Rate</a></p>
+<p><a href="/currency/dkk-to-usd" style="color: var(--primary-color); text-decoration: underline;">DKK to USD Rate</a></p>
+<p><a href="/currency/jpy-to-usd" style="color: var(--primary-color); text-decoration: underline;">JPY to USD Rate</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
