--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -8,7 +8,7 @@
     content="See the current time in multiple time zones, add or remove cities, and easily compare times. Great for meetings." />
   <meta name="google-adsense-account" content="ca-pub-6293439009227714">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css?v=2.0" />
+  <link rel="stylesheet" href="/style.css?v=2.2" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
