--- a/time-zone/ct-to-gmt/index.html
+++ b/time-zone/ct-to-gmt/index.html
@@ -8,7 +8,7 @@
         content="Convert Central Time (CT) to London (GMT/BST) instantly. Compare schedules between ct and gmt with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style.css?v=2.0" />
+    <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -121,9 +121,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
-                <p><a href="/time-zone/cet-to-pst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Pacific Time (PT)</a></p>
+                <p><a href="/time-zone/jst-to-pst" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Pacific Time (PT)</a></p>
+<p><a href="/time-zone/pst-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to London (GMT/BST)</a></p>
 <p><a href="/time-zone/cet-to-cst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to China Standard Time (CST)</a></p>
-<p><a href="/time-zone/gmt-to-ist" style="color: var(--primary-color); text-decoration: underline;">London (GMT/BST) to India Standard Time (IST)</a></p>
 <p><a href="/time-code/convert-bst-to-local-time" style="color: var(--primary-color); text-decoration: underline;">British Summer Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
