--- a/time-zone/jst-to-est/index.html
+++ b/time-zone/jst-to-est/index.html
@@ -8,7 +8,7 @@
         content="Convert Japan Standard Time (JST) to Eastern Time (ET) instantly. Compare schedules between jst and est with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style.css?v=2.0" />
+    <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -121,9 +121,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
-                <p><a href="/time-zone/jst-to-est" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Eastern Time (ET)</a></p>
-<p><a href="/time-zone/jst-to-pst" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Pacific Time (PT)</a></p>
-<p><a href="/time-zone/cet-to-jst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Japan Standard Time (JST)</a></p>
+                <p><a href="/time-zone/aet-to-pst" style="color: var(--primary-color); text-decoration: underline;">Australian Eastern Time (AET) to Pacific Time (PT)</a></p>
+<p><a href="/time-zone/aet-to-est" style="color: var(--primary-color); text-decoration: underline;">Australian Eastern Time (AET) to Eastern Time (ET)</a></p>
+<p><a href="/time-zone/cet-to-est" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Eastern Time (ET)</a></p>
 <p><a href="/time-code/convert-edt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Eastern Daylight Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
