--- a/time-zone/mt-to-est/index.html
+++ b/time-zone/mt-to-est/index.html
@@ -8,7 +8,7 @@
         content="Convert Mountain Time (MT) to Eastern Time (ET) instantly. Compare schedules between mt and est with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css?v=2.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
