Move checkbox to appear before label text

--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -86,10 +86,11 @@
 
         <button onclick="addTimeZone()" class="primary">Add time zone</button>
 
-        <label for="all" style="display: inline-flex; align-items: center; gap: 0.5em; width: 100%;">
+        <label for="showMatrix"
+          style="display: inline-flex; align-items: center; gap: 0.5em; width: 100%; cursor: pointer;">
+          <input id="showMatrix" type="checkbox" style="width: auto; margin: 0;" />
           Show differences between all time zones
         </label>
-        <input id="all" type="checkbox" />
 
 
 
