Update footer with Terms and About pages

--- a/contact.html
+++ b/contact.html
@@ -59,16 +59,21 @@
 
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
-        <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-            <p style="margin-bottom: 12px;">© 2026 Toolsified. Smart tools for everyday tasks.</p>
-            <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px;">
-                <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
-                <a href="/contact" style="color: inherit; text-decoration: underline;">Contact Us</a>
-            </div>
-            <p><a href="mailto:info@toolsified.com"
-                    style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
-        </div>
-    </footer>
+    <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
+      <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
+      <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
+        <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
+        <span>|</span>
+        <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
+        <span>|</span>
+        <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
+        <span>|</span>
+        <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
+      </div>
+      <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com" style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
+      <p style="margin: 0;">Location: Norway</p>
+    </div>
+  </footer>
 </body>
 
 </html>
