--- a/time-code/convert-edt-to-local-time/index.html
+++ b/time-code/convert-edt-to-local-time/index.html
@@ -103,10 +103,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Time Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/time-code/convert-gmt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Greenwich Mean Time to Local</a></p>
-<p><a href="/time-code/convert-edt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Eastern Daylight Time to Local</a></p>
-<p><a href="/time-code/convert-bst-to-local-time" style="color: var(--primary-color); text-decoration: underline;">British Summer Time to Local</a></p>
-<p><a href="/time-zone/ct-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Central Time (CT) to London (GMT/BST)</a></p>
+                <p><a href="/time-code/convert-bst-to-local-time" style="color: var(--primary-color); text-decoration: underline;">British Summer Time to Local</a></p>
+<p><a href="/time-code/convert-cest-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Central European Summer Time to Local</a></p>
+<p><a href="/time-code/convert-pdt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Pacific Daylight Time to Local</a></p>
+<p><a href="/time-zone/mt-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Mountain Time (MT) to London (GMT/BST)</a></p>
                 <p><a href="/time-code" style="color: var(--primary-color); text-decoration: underline;">Back to
                         Time-code Translator Hub</a></p>
             </div>
@@ -128,16 +128,21 @@
     </main>
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
-        <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-            <p style="margin-bottom: 12px;">© 2026 Toolsified. Smart tools for everyday tasks.</p>
-            <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px;">
-                <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
-                <a href="/contact" style="color: inherit; text-decoration: underline;">Contact Us</a>
-            </div>
-            <p><a href="mailto:info@toolsified.com"
-                    style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
-        </div>
-    </footer>
+    <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
+      <p style="margin-bottom: 12px;">© 2026 Toolsified &mdash; Independent web tools platform.</p>
+      <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px; flex-wrap: wrap;">
+        <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
+        <span>|</span>
+        <a href="/terms" style="color: inherit; text-decoration: underline;">Terms</a>
+        <span>|</span>
+        <a href="/about" style="color: inherit; text-decoration: underline;">About</a>
+        <span>|</span>
+        <a href="/contact" style="color: inherit; text-decoration: underline;">Contact</a>
+      </div>
+      <p style="margin: 4px 0;">Contact: <a href="mailto:info@toolsified.com" style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
+      <p style="margin: 0;">Location: Norway</p>
+    </div>
+  </footer>
 
     <script>
         const { DateTime } = luxon;
